# melk-led

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  melk-led.example.toml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
macos-app/: README.md
macos-app/MelkLED/: ContentView.swift  MelkLEDApp.swift
macos-app/MelkLED.xcodeproj/: project.pbxproj
macos-app/MelkLED.xcodeproj/xcshareddata/xcschemes/: MelkLED.xcscheme
macos-app/MelkLED/Assets.xcassets/AccentColor.colorset/: Contents.json
macos-app/MelkLED/BLE/: MelkController.swift  MelkDevice.swift
macos-app/MelkLED/Models/: AlertSettings.swift  ClaudeHookManager.swift  DeviceStore.swift  Groups.swift  Scenes.swift
macos-app/MelkLED/Protocol/: MelkProtocol.swift
macos-app/MelkLED/Server/: ControlServer.swift  HTTP.swift
macos-app/MelkLED/Views/: ControlSurface.swift  DetailViews.swift  GroupEditorView.swift  SceneEditorView.swift  SettingsView.swift
melk_led/: __init__.py  api.py  async_runner.py  cli.py  config.py  device.py  manager.py  nlu.py  protocol.py  scenes.py
scripts/: _bt_check.py  _bundle_bootstrap.py  fix_macos_bluetooth.sh  lights-bundle  selftest.py
tests/: test_nlu_scenes.py  test_protocol.py
